# university-lab-2

./: CMakeLists.txt  README.md  main.cpp  polynom-list.cpp  polynom.cpp
include/: polynom-list.h  polynom.h
